[workspace]
members = [
    "packages/*",
    "contracts/fungible-tokens/*",
    "contracts/non-fungible-tokens/*",
    "contracts/data-storage/*",
    "contracts/app/*",
    "contracts/finance/*",
    # "contracts/automation/*",
    "contracts/modules/*",
    "contracts/os/*",
    "contracts/accounts/*",
    "contracts/math/*",
    "contracts/socket/*",

    #Internal
    "tests",
    "tests/ibc-tests",
    "tests/e2e",
]
resolver = "2"

[profile.release]
debug = false
debug-assertions = false
opt-level = 's'
codegen-units = 1
rpath = false
lto = true
overflow-checks = true
panic = 'abort'
strip = true

[workspace.dependencies]
andromeda-std = { path = "./packages/std", default-features = false, features = [
    "deploy",
] }
andromeda-macros = { path = "./packages/std/macros", default-features = false }
andromeda-non-fungible-tokens = { path = "./packages/andromeda-non-fungible-tokens", version = "1.0.1-b.1" }
andromeda-fungible-tokens = { path = "./packages/andromeda-fungible-tokens", version = "1.0.0" }
andromeda-finance = { path = "./packages/andromeda-finance", version = "1.0.0" }
andromeda-data-storage = { path = "./packages/andromeda-data-storage", version = "1.0.0" }
andromeda-modules = { path = "./packages/andromeda-modules", version = "2.0.0" }
andromeda-app = { path = "./packages/andromeda-app", version = "1.0.0" }
andromeda-ecosystem = { path = "./packages/andromeda-ecosystem", version = "1.0.0" }
andromeda-accounts = { path = "./packages/andromeda-accounts", version = "1.0.0" }
andromeda-math = { path = "./packages/andromeda-math", version = "1.0.0" }
andromeda-testing = { path = "./packages/andromeda-testing", version = "1.0.0" }
andromeda-testing-e2e = { path = "./packages/andromeda-testing-e2e", version = "1.0.0" }
andromeda-socket = { path = "./packages/andromeda-socket", version = "0.1.0" }
andromeda-cw-json = { path = "./packages/andromeda-cw-json", version = "0.1.1" }

strum_macros = "0.24.3"
cosmwasm-std = "^2.2"
cw-utils = "2.0.0"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
cw20 = "2.0.0"
cw20-base = "2.0.0"
cw3 = "2.0.0"
cw4 = "2.0.0"
cw721 = { git = "https://github.com/andromedaprotocol/cw721-2.2", branch = "removeExtension" }
cw721-base = { git = "https://github.com/andromedaprotocol/cw721-2.2", branch = "removeExtension" }
cw-asset = "4.0.0"
cosmwasm-schema = "^2.2"
semver = "1.0.25"
enum-repr = "0.2.6"
cw-multi-test = "2.5.0"
serde = { version = "1.0.217" }
test-case = { version = "3.3.1" }
cw-orch = "0.27.0"
cw-orch-daemon = "0.29.1"
jsonschema-valid = { version = "0.5.2" }
serde_json = { version = "1.0.143" }
rstest = "0.26.1"
bech32 = "0.9.1"
ripemd = "0.1"
hex = "0.4"
secp256k1 = "0.30.0"
thiserror = { version = "2.0.15" }
cw-ownable = "2.1.0"

astroport = { git = "https://github.com/astroport-fi/astroport-core" } 
cosmrs = { version = "0.19.0", features = ["cosmwasm"]}
sha2 = "0.10.9"
