[package]
name = "e2e-tests"
version = "1.0.0"
edition = "2021"
rust-version = "1.75.0"
publish = false

[dev-dependencies]
#App
andromeda-app = { workspace = true }
andromeda-app-contract = { path = "../contracts/app/andromeda-app-contract", features = [
    "testing",
] }
rstest = "0.24.0"

#Non-Fungible Tokens
andromeda-non-fungible-tokens = { workspace = true }
andromeda-fungible-tokens = { workspace = true }
andromeda-cw721 = { path = "../contracts/non-fungible-tokens/andromeda-cw721", features = [
    "testing",
] }
andromeda-crowdfund = { path = "../contracts/non-fungible-tokens/andromeda-crowdfund", features = [
    "testing",
] }
andromeda-auction = { path = "../contracts/non-fungible-tokens/andromeda-auction", features = [
    "testing",
] }
# # andromeda-wrapped-cw721 = { path = "../contracts/non-fungible-tokens/andromeda-wrapped-cw721", features = ["testing"] }
andromeda-marketplace = { path = "../contracts/non-fungible-tokens/andromeda-marketplace", features = [
    "testing",
] }
# # andromeda-ics721 = { path = "../contracts/non-fungible-tokens/andromeda-ics721", features = ["testing"] }

# #Automation
# # andromeda-automation = { path = "../packages/andromeda-automation" }
# # andromeda-counter = { path = "../contracts/automation/andromeda-counter", features = ["testing"] }


#Fungible Tokens
# andromeda-fungible-tokens = { path = "../packages/andromeda-fungible-tokens" }
andromeda-cw20 = { path = "../contracts/fungible-tokens/andromeda-cw20", features = [
    "testing",
] }
andromeda-cw20-staking = { path = "../contracts/fungible-tokens/andromeda-cw20-staking", features = [
    "testing",
] }
andromeda-lockdrop = { path = "../contracts/fungible-tokens/andromeda-lockdrop", features = [
    "testing",
] }
# andromeda-cw20-staking = { path = "../contracts/fungible-tokens/andromeda-cw20-staking", features = ["testing"] }

# #Modules
andromeda-modules = { workspace = true }
andromeda-rates = { path = "../contracts/modules/andromeda-rates", features = [
    "testing",
] }
andromeda-address-list = { path = "../contracts/modules/andromeda-address-list", features = [
    "testing",
] }


# #Finance
andromeda-finance = { workspace = true }
andromeda-splitter = { path = "../contracts/finance/andromeda-splitter", features = [
    "testing",
] }
andromeda-fixed-amount-splitter = { path = "../contracts/finance/andromeda-fixed-amount-splitter", features = [
    "testing",
] }
andromeda-conditional-splitter = { path = "../contracts/finance/andromeda-conditional-splitter", features = [
    "testing",
] }
andromeda-vesting = { path = "../contracts/finance/andromeda-vesting", features = [
    "testing",
] }

andromeda-validator-staking = { path = "../contracts/finance/andromeda-validator-staking", features = [
    "testing",
] }

andromeda-rate-limiting-withdrawals = { path = "../contracts/finance/andromeda-rate-limiting-withdrawals", features = [
    "testing"
] }


# Data Storage
andromeda-data-storage = { workspace = true }
andromeda-primitive = { path = "../contracts/data-storage/andromeda-primitive", features = [
    "testing",
] }

# #OS

andromeda-kernel = { path = "../contracts/os/andromeda-kernel", features = [
    "testing",
] }
andromeda-economics = { path = "../contracts/os/andromeda-economics", features = [
    "testing",
] }
andromeda-ibc-registry = { path = "../contracts/os/andromeda-ibc-registry", features = [
    "testing",
] }
andromeda-adodb = { path = "../contracts/os/andromeda-adodb", features = [
    "testing",
] }
andromeda-vfs = { path = "../contracts/os/andromeda-vfs", features = [
    "testing",
] }

# # Math
andromeda-math = { workspace = true }
andromeda-counter = { path = "../contracts/math/andromeda-counter", features = [
    "testing",
] }
andromeda-shunting = { path = "../contracts/math/andromeda-shunting", features = [
    "testing",
] }
andromeda-curve = { path = "../contracts/math/andromeda-curve", features = [
    "testing",
] }
andromeda-graph = { path = "../contracts/math/andromeda-graph", features = [
    "testing",
] }


#Other Crates
# common = { version = "0.1.0", path = "../packages/common" }
andromeda-testing = { workspace = true }

#Cosmwasm Crates
cosmwasm-std = { workspace = true, features = ["staking"] }
cosmwasm-schema = { workspace = true }
cw721-base = { workspace = true }
cw721 = { workspace = true }
cw20 = { workspace = true }
cw-asset = { workspace = true }
cw-utils = { workspace = true }
toml = "0.8"
cw-orch = { workspace = true }
cw-orch-interchain = "=0.3.0"
ibc-relayer-types = "=0.25.1"

andromeda-std = { workspace = true }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cw-multi-test = { workspace = true }


[[test]]
name = "app"
path = "app.rs"

[[test]]
name = "crowdfund_app"
path = "crowdfund_app.rs"

[[test]]
name = "auction_app"
path = "auction_app.rs"

[[test]]
name = "marketplace_app"
path = "marketplace_app.rs"

[[test]]
name = "splitter"
path = "splitter.rs"

[[test]]
name = "validator_staking"
path = "validator_staking.rs"

[[test]]
name = "shunting"
path = "shunting.rs"

[[test]]
name = "fixed_amount_splitter"
path = "fixed_amount_splitter.rs"

[[test]]
name = "cw20_staking"
path = "cw20_staking.rs"

[[test]]
name = "ibc_registry"
path = "ibc_registry.rs"

[[test]]
name = "kernel_cw_orch"
path = "kernel_orch.rs"

[[test]]
name = "conditional_splitter"
path = "conditional_splitter.rs"

[[test]]
name = "cw20_app"
path = "cw20_app.rs"

[[test]]
name = "kernel"
path = "kernel.rs"