[package]
name = "ibc-tests"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
publish = false

[[test]]
name = "validator_staking"

[[test]]
name = "kernel_ibc"

[dependencies]
serde.workspace = true
tokio = "1.39.3"
cw-orch = { version = "0.24.1", features = ["daemon"] }
cw-orch-daemon = "0.24.3"
cw-orch-interchain = { version = "0.3.1", features = ["daemon"] }

andromeda-testing-e2e = { workspace = true }

andromeda-app-contract = { path = "../contracts/app/andromeda-app-contract", features = [
    "testing",
] }

andromeda-validator-staking = { path = "../contracts/finance/andromeda-validator-staking", features = [
    "testing",
] }

andromeda-kernel = { path = "../contracts/os/andromeda-kernel", features = [
    "testing",
] }

andromeda-finance = { workspace = true }
andromeda-std = { workspace = true }
andromeda-app = { workspace = true }
cosmwasm-std = { workspace = true, features = ["staking"] }
cosmrs = "0.19.0"
prost-types = "0.12.3"
env_logger = "0.11.5"
serde_yml = "0.0.12"
