[package]
name = "andromeda-cw20-staking"
version = "0.1.0"
authors = ["AndrewPochapsky <andrew.pochapsky@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "0.16.7" }
cw-storage-plus = "0.9.1"
schemars = "0.8.3"
cw20 = "0.9.1"
cw2 = "0.9.1"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
cosmwasm-bignumber = "2.2.0"
cw-asset = "1.0.2"

andromeda-protocol = { version = "0.1.0", path = "../../packages/andromeda_protocol" }
common = { version = "0.1.0", path = "../../packages/common" }
ado-base = { path = "../../packages/ado_base", version = "0.1.0" }

[dev-dependencies]
terra-cosmwasm = { version = "2.2.0" }
cosmwasm-schema = { version = "0.16.0" }
