[package]
name = "andromeda-merkle-airdrop"
version = "0.1.0"
authors = ["AndrewPochapsky <andrew.pochapsky@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "0.16.7"
cw-storage-plus = "0.9.1"
cw0 = "0.9.1"
cw2 = "0.9.1"
cw20 = "0.9.1"

schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
hex = "0.4"
sha2 = { version = "0.9.5", default-features = false }
cw-asset = { version = "1.0.2" }

andromeda-ft = { version = "0.1.0", path = "../../packages/andromeda-ft" }
common = { version = "0.1.0", path = "../../packages/common" }
ado-base = { path = "../../packages/ado_base", version = "0.1.0" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
