[package]
name = "andromeda-portal-ado"
version = "0.1.0"
edition = "2018"
description = "IBC Enabled contracts that receives CW20 tokens and sends them over ICS20 to a remote chain"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw0 = { version = "0.9.0" }
cw2 = { version = "0.9.0" }
cw20 = { version = "0.9.0" }
cosmwasm-std = { version = "0.16.0", features = ["stargate"] }
cw-storage-plus = { version = "0.9.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
andromeda-protocol = { version = "0.1.0", path = "../../packages/andromeda_protocol" }
ado-base = { path = "../../packages/ado_base", version = "0.1.0" }
common = { version = "0.1.0", path = "../../packages/common" }
