[package]
name = "andromeda-addresslist"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = "0.16.0"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
schemars = "0.8.3"
cosmwasm-storage = "0.16.0"
thiserror = { version = "1.0.26" }
cw-storage-plus = "0.9.1"
cw2 = "0.9.1"
andromeda-protocol = { version = "0.1.0", path = "../../packages/andromeda_protocol" }
ado-base = { path = "../ado_base", version = "0.1.0", default-features= false, features = ["library"]}

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
