[package]
name = "andromeda-cw721-offers"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std = { version = "0.16.2" }
cw-storage-plus = "0.8.0"
cw2 = "0.8.1"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
andromeda-protocol = { version = "0.1.0", path = "../../packages/andromeda_protocol" }
common = { version = "0.1.0", path = "../../packages/common" }
ado-base = { path = "../../packages/ado_base", version = "0.1.0"}
cw721 = "0.9.1"
cw721-base = { version = "0.9.1", features = ["library"] }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
