[package]
name = "andromeda-factory"
version = "0.1.0"
authors = ["Connor Barr <crnbarr@gmail.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "0.16.7"
cw-storage-plus = "0.9.1"
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
cw721 = "0.9.1"
cw2 = "0.9.1"

andromeda-protocol = { version = "0.1.0", path = "../../packages/andromeda_protocol" }
ado-base = { path = "../../packages/ado_base", version = "0.1.0" }
common = { version = "0.1.0", path = "../../packages/common" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
terra-cosmwasm = { version = "2.2.0" }
